fix(styling) - small changes to aside to align entries left and right

--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -386,6 +386,7 @@ pb-drawer {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content:space-between;
 }
 
 .facets h3 paper-checkbox {
@@ -395,6 +396,7 @@ pb-drawer {
 
 .facets table {
     font-size: 14px;
+    width:100%;
 }
 
 .facets table table {
